Changes for 1.8.3

 - [ZBX-2360] added multiple acknowledging for OK>UNKNOWN>OK and PROBLEM>UNKNOWN>PROBLEM events (Vedmak,Sasha)
 - [ZBX-2374] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-2347] fixed last 20 issues in event details showing less than 20 issues (Vedmak)
 - [DEV-459] made improvements in discovery page generation (Aly)
 - [ZBX-2148] added preview button in graphs form (Aly)
 - [ZBX-2337] fixed error when select web item in trigger configuration (Vedmak)
 - [ZBX-2306] fixed links for graphs in screens (Aly)
 - [ZBX-633] removed linkage of OpenIPMI library to Agents in "configure" script (Sasha) 
 - [ZBX-633] more debug information in checks_ipmi.c module (Sasha) 
 - [ZBX-2362] fixed processing of logrt[] checks under Windows (Sasha)
 - [ZBX-2356] fixed error when perform group actions creating item (Vedmak)
 - [ZBX-2355] fixed error when try to massupdate trigger severity (Vedmak)
 - [ZBX-2354] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-2352] fixed typo in the default locale (Richlv)
 - [ZBX-2312] fixed event order in "monitoring triggers" and "last 20 events" (Vedmak)
 - [ZBX-2264] added opportunity to translate class.cuser.php and config.inc.php (AM)
 - [ZBX-2132] added date format constants to locales, changed zbx_date2str function to meet regional formats and date translation (AM)
 - [ZBXNEXT-311] improved the speed of dbconfig synchronization (Sasha)
 - [ZBX-2329] fixed screen renaming (Aly)
 - [ZBX-2315] fixed multiple issues with JS scrollbar (Aly)
 - [ZBX-2321] fixed log items appearing in the wrong order (Alexei,asaveljevs,Sasha)
 - [DEV-458] added marks on maps if elements trigger changed status recently (Aly)
 - [ZBX-2290] added export/import of map images (Vedmak)
 - [ZBX-2290] fixed image update with oracle db (Vedmak)
 - [ZBX-2317] updated French translation; thanks to alixen (Richlv)
 - [ZBX-2283] fixed incorrect time calculating in slidebar (Aly)